--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,19 @@
   font-weight: bold;
   font-size: 3em;
 }
+
+
+.Typist .Cursor {
+  display: inline-block; }
+  .Typist .Cursor--blinking {
+    opacity: 1;
+    animation: blink 1s linear infinite; }
+
+@keyframes blink {
+  0% {
+    opacity: 1; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } 
+}
