--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,19 @@
   transform: translate(-50%, -50%);
   color: white;
   font-weight: bold;
-  font-size: 3em;
+  font-size: 4em;
+  text-align: center;
+}
+
+.prompt-text {
+  position: absolute;
+  top: 50%;  /* position the top  edge of the element at the middle of the parent */
+  left: 50%; /* position the left edge of the element at the middle of the parent */
+  transform: translate(-50%, -50%);
+  color: white;
+  font-weight: bold;
+  font-size: 4em;
+  text-align: center;
 }
 
 
