updated desktop styling for qr prompts.

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ body {
 
 /* QR Prompt */
 .prompt-text {
+  width: 85vw;
   font-family: "Biryani" !important;
   position: absolute;
   top: 50%;  
