updated teal -> less teal

--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ body {
 
 /* ABOUT US */
 #about-us {
-  background-color: #52c5ff;
+  background-color: #52b5ff;
 }
 
 #about-us-content {
@@ -171,7 +171,7 @@ body {
 
 /* OUR PROJECT */
 #our-project {
-  background-color: #52c5ff;
+  background-color: #52b5ff;
 }
 
 #our-project-content {
