--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@ body {
 }
 
 #gallery img {
-  width: 100%;
+  height: 100%;
   /* for centering vertically: */
   margin: 0;
   position: absolute;
@@ -242,6 +242,10 @@ body {
   font-weight: 600;
 }
 
+.thedata-container {
+  width: 67vw;
+  height: 50vh;
+}
 
 @media only screen and (max-width: 480px) {
   .thedata-header {
