--- a/src/App.css
+++ b/src/App.css
@@ -248,9 +248,10 @@ body {
 }
 
 #thedata-content {
-  /*width: 67vw;*/
+  max-height: 100vh;
+  width: 100vw;
   /*margin: auto;*/
-  align-items: center;
+  /*align-items: center;*/
 }
 
 .thedata-header {
@@ -260,11 +261,28 @@ body {
   font-weight: 100;
 }
 
+
 .thedata-container {
-  width: 67vw;
-  height: 50vh;
+  width: 85vw;
+  height: 75vh;
+  margin: auto;
   display: flex;
   flex-direction: column;
+}
+
+.bar-chart {
+  width: 100%;
+  height: 100%;
+}
+
+.radar-chart {
+  width: 100%;
+  height: 100%;
+}
+
+.react-tabs__tab-panel {
+  width: 100%;
+  height: 100%;  
 }
 
 @media only screen and (max-width: 480px) {
