formatting for data desktop/mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -243,6 +243,15 @@ body {
 
 
 /* THE DATA */
+
+.react-tabs__tab {
+  color: #fafafa;
+}
+
+.react-tabs__tab--selected {
+  color: black;
+}
+
 #thedata {
   background-color: #2b3ecc;
 }
